add some changes

--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -1,5 +1,5 @@
     {% for product in products %}
-    <li data-sex="{{product.sex}}" data-rating="{{product.flooredrating}}" data-duration="{{product.duration}}"
+    <!-- <li data-sex="{{product.sex}}" data-rating="{{product.flooredrating}}" data-duration="{{product.duration}}"
         data-price="{{product.id}}" style="border-top: 1px solid; border-right: 1px solid; padding: 0; margin: 0">
         <a href="/creators/goods/{{product.id}}" class="uk-text-secondary uk-link-reset">
             <div class="uk-card uk-card-hover" style=" width: 333px; border-collapse: collapse;">
@@ -33,5 +33,33 @@
                 </div>
             </div>
         </a>
-    </li>
+    </li> -->
+
+     <div class="box-footer">
+            <div style="width:238px;height:443px; margin: auto;">
+            <img src="{{product.picture1}}" width="238px" height="343px" alt="" >
+            
+            <div class="box-down">
+                    <h3 style="font-size:25px; font-weight:bold; margin: 0;">{{product.price}} ₽</h3>
+                    <p class="star">
+						<strong>&star;</strong>
+						<strong>&star;</strong>
+						<strong>&star;</strong>
+						<strong>&star;</strong>
+						<strong>&star;</strong>
+					</p>
+                    <p style="font-size:15px; margin: 0;">{{product.product_name}}</p>
+            </div>
+            <div class="box-down-drop">
+                <div style="margin: auto;" class="box-down-drop-img">
+                    <p style="margin: 0;" class="">{{product.brand}}</p>
+                </div>
+                <div style="margin: auto;" class="box-down-drop-img">
+                    <img src="{{product.picture1}}" width="30px" height="30px" alt="">
+                </div>
+            </div>
+            </div>
+            
+        </div>
+
     {% endfor %}
