--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="uk-margin-medium-top uk-width-1">
-                <h3 class="uk-width-1">Размеры:</h3>
+                <h3 class="uk-width-1 uk-text-left">Размеры:</h3>
                 <div class="uk-grid uk-grid-small uk-grid-match uk-width-4-5" id="sizelist" uk-grid>
                     {% for size in product.sizes %}
                     <button class="uk-button uk-button-link size">{{size}}</button>
@@ -143,82 +143,46 @@
             <h2 class="uk-width-1-2 uk-text-center">Информация</h2>
             <div class="uk-width-1-2" style="padding: 5px 10%;">
                 <ul class="uk-nav-default" uk-nav>
-                    <li class="uk-active"><a href="#">Active</a></li>
                     <li class="uk-parent">
-                        <a href="#">Parent <span uk-nav-parent-icon></span></a>
-                        <ul class="uk-nav-sub">
-                            <li><a href="#">Sub item</a></li>
-                            <li>
-                                <a href="#">Sub item</a>
-                                <ul>
-                                    <li><a href="#">Sub item</a></li>
-                                    <li><a href="#">Sub item</a></li>
-                                </ul>
+                        <a href="# " class="uk-text-muted uk-flex uk-flex-middle uk-flex-between"
+                            style="border-bottom: 1px solid">
+                            <h2 class="uk-text-muted uk-margin-small-bottom">Описание</h2>
+                            <span uk-icon="icon: menu"></span>
+                        </a>
+                        <ul class="uk-nav-sub uk-width-1">
+                            <li class="uk-width-1">
+                                <p class="uk-text-break">{{product.description}}</p>
                             </li>
                         </ul>
                     </li>
+
                     <li class="uk-parent">
-                        <a href="#">Parent <span uk-nav-parent-icon></span></a>
-                        <ul class="uk-nav-sub">
-                            <li><a href="#">Sub item</a></li>
-                            <li><a href="#">Sub item</a></li>
+                        <a class="uk-text-muted uk-flex uk-flex-middle uk-flex-between"
+                            style="border-bottom: 1px solid">
+                            <h2 class="uk-text-muted uk-margin-small-bottom">Харрактиристики</h2>
+                            <span uk-icon="icon: menu"></span>
+                        </a>
+                        <ul class="uk-nav-sub uk-width-1">
+                            <li class="uk-width-1">
+                                <p class="uk-text-break">На данны момент пусто</p>
+                            </li>
                         </ul>
                     </li>
+
                 </ul>
             </div>
+
         </div>
 
         <br>
         <br>
 
-        <div class="uk-flex uk-flex-around">
-            <div class="uk-width-2-5">
-                <ul class="uk-comment-list">
-                    {% for message in messages %}
-                    <li>
-                        <article class="uk-comment uk-comment-primary uk-visible-toggle uk-border-rounded"
-                            tabindex="-1">
-                            <header class="uk-comment-header uk-position-relative">
+        <div uk-grid>
 
-                                <div class="uk-grid-medium uk-flex-middle" uk-grid>
-                                    <div class="uk-width-auto">
-
-                                        <img class="uk-comment-avatar" src="{{message.image_user}}" width="80"
-                                            height="80" alt="">
-                                    </div>
-                                    <div class="uk-width-expand">
-                                        <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset"
-                                                href="#">{{message.comentator_email}}</a></h4>
-                                        {% if message.flag == "day" %}
-                                        <p class="uk-comment-meta uk-margin-remove-top"><a class="uk-link-reset"
-                                                href="#">{{message.created_data}}</a>&nbsp;days ago.</p>
-                                        {% elif message.flag  == "month" %}
-                                        <p class="uk-comment-meta uk-margin-remove-top"><a class="uk-link-reset"
-                                                href="#">{{message.created_data}}</a>&nbsp;month ago.</p>
-                                        {% else %}
-                                        <p class="uk-comment-meta uk-margin-remove-top"><a class="uk-link-reset"
-                                                href="#">{{message.created_data}}</a>&nbsp;year ago.</p>
-                                        {% endif %}
-                                        <p>Оценка: {{message.rating}}</p>
-                                    </div>
-                                </div>
-                                <!-- <div class="uk-position-top-right uk-position-small uk-hidden-hover"><a -->
-                                <!-- class="uk-link-muted" href="#">Reply</a></div> -->
-
-                            </header>
-                            <div class="uk-comment-body">
-                                {{message.review}}
-                            </div>
-                        </article>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
             <div class="uk-width-2-5">
 
-                <div class="uk-flex uk-flex-center uk-text-center"
-                    style="background-color: rgba(196, 196, 196, 0.5); border-radius: 20px; padding: 30px 0;">
-                    <div class=" uk-margin-right uk-height-small">
+                <div class="uk-flex uk-flex-center uk-text-center  uk-card uk-card-default" style="border-radius: 20px; padding: 30px 0;">
+                    <div class="uk-margin-right uk-height-small">
                         <h3>{{product.rating}}</h3>
                         <p>На основании <br>{{product.rate_sum}} отзывов</p>
                         <div>
@@ -237,36 +201,112 @@
                             {% endif %}
                         </div>
                     </div>
-                    <!-- <div class="uk-margin-left uk-height-small" style="width: 40%;text-align: left">
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">1</div>
-                            <div>
-                                <p>50%</p>
-                            </div>
-                        </div>
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">2</div>
-                            <div>
-                                <p>50%</p>
-                            </div>
-                        </div>
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">3</div>
-                            <div>
-                                <p>50%</p>
-                            </div>
-                        </div>
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">4</div>
-                            <div>
-                                <p>50%</p>
-                            </div>
-                        </div>
-
-                    </div> -->
                 </div>
-            </div>
+                <div class="uk-width-1 uk-flex uk-flex-middle uk-flex-center uk-margin-small-top">
+                    {% if request.user.is_authenticated %}
+                    <button style="color: white; background-color:#0A3644"
+                        class="uk-button uk-margin-small-bottom" type="button"
+                        uk-toggle="target: #modal-example">Написать отзыв</button>
+                    {% else %}
+                    <a style="color: white; background-color:#0A3644"
+                        class="uk-button uk-margin-small-bottom" type="button"
+                        href="/accounts/login/">Написать отзыв</a>
+                    {% endif %}
 
+                    <div id="modal-example" uk-modal>
+
+                        <div class="uk-modal-dialog uk-modal-body">
+                            <h2 class="uk-modal-title">Отзыв</h2>
+                            <div class="uk-flex">
+                                <img src="{{user.userImage}}" alt="" class="uk-border-rounded" width="50" height="80"
+                                    alt="">
+                                <div class="uk-flex-column uk-margin-left">
+                                    <p class="uk-margin-remove">{{ user.first_name }}</p>
+                                    <p class="uk-margin-remove">{{ user.email }}</p>
+                                </div>
+                            </div>
+                            <form method="POST" action="">
+                                <div class="uk-margin-top">
+
+                                    <h3>Отзыв:</h3>
+                                    <textarea class="uk-textarea" name="review" id="" rows="10"
+                                        style="width: 100%;" maxlength="1500"></textarea>
+                                    <div class="uk-flex" style="margin-left: 45%">
+                                        <p class="uk-margin-small-top uk-margin-small-right">Оценка: </p>
+                                        <div class="uk-margin-remove-right rating-area">
+                                            <input type="radio" id="star-5" name="rating" value="5">
+                                            <label for="star-5" title="Оценка «5»"></label>
+                                            <input type="radio" id="star-4" name="rating" value="4">
+                                            <label for="star-4" title="Оценка «4»"></label>
+                                            <input type="radio" id="star-3" name="rating" value="3">
+                                            <label for="star-3" title="Оценка «3»"></label>
+                                            <input type="radio" id="star-2" name="rating" value="2">
+                                            <label for="star-2" title="Оценка «2»"></label>
+                                            <input type="radio" id="star-1" name="rating" value="1">
+                                            <label for="star-1" title="Оценка «1»"></label>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% csrf_token %}
+                                <p class="uk-text-right">
+                                    <button class="uk-button uk-button-default uk-modal-close"
+                                        type="button">Закрыть</button>
+                                    <button name="comment_product" class="uk-button uk-button-primary"
+                                        type="submit">Опубликовать</button>
+                                </p>
+                            </form>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+            <div class="uk-width-3-5">
+                <ul class="uk-comment-list">
+                    {% for message in messages %}
+                    <li>
+                        
+                        <article class="uk-comment uk-comment-primary uk-visible-toggle uk-border-rounded" tabindex="-1">
+                            <header class="uk-comment-header uk-position-relative">
+
+                                <div class="uk-grid-medium uk-flex-middle" uk-grid>
+                                    <div class="uk-width-auto">
+
+                                        <img class="uk-comment-avatar" src="{{message.image_user}}" width="80"
+                                            height="80" alt="">
+                                    </div>
+                                    <div class="uk-width-expand">
+                                        <h4 class="uk-comment-title uk-margin-remove"><p>{{message.comentator_email}}</p></h4>
+                                        <ul class="uk-comment-meta uk-subnav uk-subnav-divider">
+                                            <li>
+                                                {% if message.flag == "day" %}
+                                            <p class="uk-comment-meta" style="margin: 0"><a class="uk-link-reset"
+                                                    href="#">{{message.created_data}}</a>&nbsp;days ago.</p>
+                                            {% elif message.flag  == "month" %}
+                                            <p class="uk-comment-meta" style="margin: 0"><a class="uk-link-reset"
+                                                    href="#">{{message.created_data}}</a>&nbsp;month ago.</p>
+                                            {% else %}
+                                            <p class="uk-comment-meta" style="margin: 0"><a class="uk-link-reset"
+                                                    href="#">{{message.created_data}}</a>&nbsp;year ago.</p>
+                                            {% endif %}
+                                            </li>
+                                            <li>
+                                            <p style="margin: 0">Оценка: {{message.rating}}</p>
+                                        </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                            </header>
+                            <div class="uk-comment-body">
+                                {{message.review}}
+                            </div>
+                        </article>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
     </container>
 </div>
