rebased main-menu top

--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -75,7 +75,7 @@
 
                 {% else %}
                 <a class="uk-button uk-button-secondary uk-width-2-3 uk-text-bold uk-margin-small-bottom"
-                    href="/accounts/login/">Заказать</a>
+                    href="/login">Заказать</a>
                 {% endif %}
                 <div id="modal-overflow" uk-modal>
                     <div class="uk-modal-dialog">
@@ -210,7 +210,7 @@
                     {% else %}
                     <a style="color: white; background-color:#0A3644"
                         class="uk-button uk-margin-small-bottom" type="button"
-                        href="/accounts/login/">Написать отзыв</a>
+                        href="/login">Написать отзыв</a>
                     {% endif %}
 
                     <div id="modal-example" uk-modal>
