--- a/bizopt/BO/templates/forgotPassword.html
+++ b/bizopt/BO/templates/forgotPassword.html
@@ -138,7 +138,7 @@
                             <br>
                             <br>
                         </p>
-                        <h7>Уже есть аккаунта? <a href="/accounts/login/">войди в него</a></h7>
+                        <h7>Уже есть аккаунта? <a href="/login">войди в него</a></h7>
                     </div>
 
                     <div style="overflow: auto;" id="nextprevious">
