--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -930,48 +930,48 @@ section {
 
                 <div class="uk-width-2-3@s" style="width: 40%;">
 
-                    <form class="uk-form-horizontal uk-margin-large">
+                    <form class="uk-form-horizontal uk-margin-large" method="post">
 
                         <div class="uk-margin">
                             <label class="uk-form-label" for="form-horizontal-text">Название бренда</label>
                             <div class="uk-form-controls">
                                 <!-- uk-form-blank -->
-                                <input class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
+                                <input name="brand_name" class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
                             </div>
                         </div>
 
                         <div class="uk-margin">
                             <label class="uk-form-label" for="form-horizontal-text">Имя</label>
                             <div class="uk-form-controls">
-                                <input class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
+                                <input name="name" class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
                             </div>
                         </div>
 
                         <div class="uk-margin">
                             <label class="uk-form-label" for="form-horizontal-text">Телефон</label>
                             <div class="uk-form-controls">
-                                <input class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
+                                <input name="phone" class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
                             </div>
                         </div>
 
                         <div class="uk-margin">
                             <label class="uk-form-label" for="form-horizontal-text">Город</label>
                             <div class="uk-form-controls">
-                                <input class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
+                                <input name="city" class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
                             </div>
                         </div>
 
                         <div class="uk-margin">
                             <label class="uk-form-label" for="form-horizontal-text">Ссылки на соц сети</label>
                             <div class="uk-form-controls">
-                                <input class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
+                                <input name="link" class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
                             </div>
                         </div>
 
                         <div class="uk-margin">
                             <label class="uk-form-label" for="form-horizontal-text">Расскажите о бренде и его создателях</label>
                             <div class="uk-form-controls">
-                                <input class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
+                                <input name="info" class="uk-input uk-form-width-large inpF" id="form-horizontal-text" type="text" placeholder=".................................." style="box-shadow: 1px;">
                             </div>
                         </div>
 
@@ -980,7 +980,8 @@ section {
 
                         <button class="uk-button uk-button-secondary uk-width-1-2" type="submit">Отправить</button>
                     
-                    
+                        {% csrf_token %}
+
                     </form>
                 </div>
 
