added admin page

--- a/bizopt/BO/templates/menusTemplates/mediumTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/mediumTemplate.html
@@ -68,19 +68,19 @@
             <li class="uk-parent">
                 <ul class="uk-nav uk-nav-default">
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Одежда" class="uk-button uk-button-text">Одежда </a>
+                        <a href="/creators/goods/category/Clothing" class="uk-button uk-button-text">Одежда </a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Обувь" class="uk-button uk-button-text">Обувь</a>
+                        <a href="/creators/goods/category/Shoes" class="uk-button uk-button-text">Обувь</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a>
+                        <a href="/creators/goods/category/Bags" class="uk-button uk-button-text">Сумки</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Интерьер</a>
+                        <a href="/creators/goods/category/Interior" class="uk-button uk-button-text">Интерьер</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Аксессуары" class="uk-button uk-button-text">Аксессуары</a>
+                        <a href="/creators/goods/category/Accessories" class="uk-button uk-button-text">Аксессуары</a>
                     </li>
                 </ul>
             </li>
@@ -146,19 +146,19 @@
             <li class="uk-parent">
                 <ul class="uk-nav uk-nav-default">
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Одежда" class="uk-button uk-button-text">Одежда </a>
+                        <a href="/creators/goods/category/Clothing" class="uk-button uk-button-text">Одежда </a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Обувь" class="uk-button uk-button-text">Обувь</a>
+                        <a href="/creators/goods/category/Shoes" class="uk-button uk-button-text">Обувь</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a>
+                        <a href="/creators/goods/category/Bags" class="uk-button uk-button-text">Сумки</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Интерьер</a>
+                        <a href="/creators/goods/category/Interior" class="uk-button uk-button-text">Интерьер</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Аксессуары" class="uk-button uk-button-text">Аксессуары</a>
+                        <a href="/creators/goods/category/Accessories" class="uk-button uk-button-text">Аксессуары</a>
                     </li>
                 </ul>
             </li>
