--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -42,21 +42,26 @@
                     <a uk-icon="icon: user"></a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
+                            {% if user.is_partner %}
                             <li>
-                                {% if user.is_partner %}
+
                                 <a href="/partners/" class="uk-button uk-button-link" style="text-transform: none;">Вы
                                     уже
                                     партнер</a>
-                                {% else %}
-                                <a href="/partners/" class="uk-button uk-button-link"
-                                    style="text-transform: none;">Стать
-                                    партнером</a>
-                                {% endif %}
                             </li>
+                            {% else %}
+                            <li class="uk-active">
+                                <a href="/partners/" class="uk-button uk-button-link uk-text-normal"
+                                    style="text-transform: none;">Стать партнером</a>
+                            </li>
+                            {% endif %}
                             <li class="uk-nav-divider"></li>
                             <li class="uk-active"><a href="/edit/">Настройки профиля</a></li>
                             <!-- <li class="uk-active"><a href="/chats">Чаты</a></li> -->
                             <li class="uk-active"><a href="/logout/">Выйти</a></li>
+                            {% if user.is_admin and user.is_superuser and user.is_staff and user.is_active %}
+                            <li class="uk-active"><a href="/admin/">Админка</a></li>
+                            {% endif %}
                         </ul>
                     </div>
                 </li>
@@ -118,7 +123,7 @@
         <div class="uk-navbar-right uk-flex uk-flex-middle uk-flex-right uk-width-1-3">
 
             <ul class="uk-navbar-nav uk-width-auto">
-                
+
                 <li class="uk-active">
                     <a uk-icon="icon: user" href="/login"></a>
                 </li>
@@ -152,19 +157,19 @@
     <div class="uk-offcanvas-bar">
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active">
-                <a href="/creators/goods/category/Одежда" class="uk-button uk-button-text">Одежда </a>
+                <a href="/creators/goods/category/Clothing" class="uk-button uk-button-text">Одежда </a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Обувь" class="uk-button uk-button-text">Обувь</a>
+                <a href="/creators/goods/category/Shoes" class="uk-button uk-button-text">Обувь</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a>
+                <a href="/creators/goods/category/Bags" class="uk-button uk-button-text">Сумки</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Интерьер</a>
+                <a href="/creators/goods/category/Interior" class="uk-button uk-button-text">Интерьер</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Аксессуары" class="uk-button uk-button-text">Аксессуары</a>
+                <a href="/creators/goods/category/Accessories" class="uk-button uk-button-text">Аксессуары</a>
             </li>
         </ul>
     </div>
