--- a/bizopt/BO/templates/brands.html
+++ b/bizopt/BO/templates/brands.html
@@ -32,7 +32,7 @@
 
             {% for shop in brands %}
             {% if shop.name %}
-            <a href="/creators/resumes/{{shop.name}}" class="uk-text-center uk-width-2-5" style="margin: 2%;">
+            <a href="/brands/{{shop.name}}" class="uk-text-center uk-width-2-5" style="margin: 2%;">
                 <div data-src="{{shop.logoImage}}"
                     class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-inline-clip uk-transition-toggle"
                     style="border: 3px solid black;" tabindex="0" uk-img>
