--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -14,9 +14,9 @@
         <div class="uk-width-1-5" style="height: 100%; font-size: 1.2em;">
             <div class="uk-margin-small-left">
                 <ul class="uk-breadcrumb">
-                    <li><a href="/creators/goods/">Все товары</a></li>
+                    <li><a href="/goods/">Все товары</a></li>
                     {% if category %}
-                    <li><a href="/creators/goods/category/{{category}}">{{category}}</a></li>
+                    <li><a href="/goods/category/{{category}}">{{category}}</a></li>
                     {% endif %}
                     <li><span></span></li>
                 </ul> 
