--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -16,10 +16,10 @@
                 </li>
 
                 <li class="uk-active uk-flex uk-flex-middle uk-flex-center uk-width-3-4">
-                    <a href="/creators/resumes/" style="font-size: 25px; text-transform: none;">Бренды</a>
+                    <a href="/brands/" style="font-size: 25px; text-transform: none;">Бренды</a>
                     <div class="uk-divider-vertical uk-margin-remove"
                         style="height: 50%; background-color: black; width: 2px"></div>
-                    <a href="/creators/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
+                    <a href="/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
                 </li>
 
             </ul>
@@ -126,10 +126,10 @@
         <div class="uk-navbar-center uk-width-1-3" style="margin: 0 auto">
             <ul class="uk-navbar-nav uk-flex uk-flex-center">
                 <li class="uk-active uk-flex uk-flex-middle uk-flex-center">
-                    <a href="/creators/resumes/" style="font-size: 25px; text-transform: none;">Бренды</a>
+                    <a href="/brands/" style="font-size: 25px; text-transform: none;">Бренды</a>
                     <div class="uk-divider-vertical uk-margin-remove"
                         style="height: 50%; background-color: black; width: 2px"></div>
-                    <a href="/creators/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
+                    <a href="/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
                 </li>
             </ul>
         </div>
@@ -171,19 +171,19 @@
     <div class="uk-offcanvas-bar">
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active">
-                <a href="/creators/goods/category/Clothing" class="uk-button uk-button-text">Одежда </a>
+                <a href="/goods/category/Clothing" class="uk-button uk-button-text">Одежда </a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Shoes" class="uk-button uk-button-text">Обувь</a>
+                <a href="/goods/category/Shoes" class="uk-button uk-button-text">Обувь</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Bags" class="uk-button uk-button-text">Сумки</a>
+                <a href="/goods/category/Bags" class="uk-button uk-button-text">Сумки</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Interior" class="uk-button uk-button-text">Интерьер</a>
+                <a href="/goods/category/Interior" class="uk-button uk-button-text">Интерьер</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Accessories" class="uk-button uk-button-text">Аксессуары</a>
+                <a href="/goods/category/Accessories" class="uk-button uk-button-text">Аксессуары</a>
             </li>
         </ul>
     </div>
