--- a/bizopt/BO/templates/menusTemplates/mediumTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/mediumTemplate.html
@@ -51,13 +51,13 @@
             <li class="uk-nav-divider uk-margin-medium-top uk-margin-medium-bottom"></li>
 
             <li class="uk-active">
-                <a href="/creators/resumes/">
+                <a href="/brands/">
                     <h3 class="uk-button uk-button-link" style="font-size: 1.5rem;">Бренды</h3>
                 </a>
             </li>
 
             <li class="uk-active">
-                <a href="/creators/goods/">
+                <a href="/goods/">
                     <h3 class="uk-button uk-button-link" style="font-size: 1.5rem;">Магазин</h3>
                 </a>
             </li>
@@ -68,19 +68,19 @@
             <li class="uk-parent">
                 <ul class="uk-nav uk-nav-default">
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Clothing" class="uk-button uk-button-text">Одежда </a>
+                        <a href="/goods/category/Clothing" class="uk-button uk-button-text">Одежда </a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Shoes" class="uk-button uk-button-text">Обувь</a>
+                        <a href="/goods/category/Shoes" class="uk-button uk-button-text">Обувь</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Bags" class="uk-button uk-button-text">Сумки</a>
+                        <a href="/goods/category/Bags" class="uk-button uk-button-text">Сумки</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Interior" class="uk-button uk-button-text">Интерьер</a>
+                        <a href="/goods/category/Interior" class="uk-button uk-button-text">Интерьер</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Accessories" class="uk-button uk-button-text">Аксессуары</a>
+                        <a href="/goods/category/Accessories" class="uk-button uk-button-text">Аксессуары</a>
                     </li>
                 </ul>
             </li>
@@ -134,11 +134,11 @@
 
             <li class="uk-nav-divider uk-margin-medium-top uk-margin-medium-bottom"></li>
 
-            <li class="uk-active"><a href="/creators/resumes/">
+            <li class="uk-active"><a href="/brands/">
                     <h3 class="uk-button uk-button-link" style="font-size: 1.5rem;">Бренды</h3>
                 </a>
             </li>
-            <li class="uk-active"><a href="/creators/goods/">
+            <li class="uk-active"><a href="/goods/">
                     <h3 class="uk-button uk-button-link" style="font-size: 1.5rem;">Магазин</h3>
                 </a>
             </li>
@@ -146,19 +146,19 @@
             <li class="uk-parent">
                 <ul class="uk-nav uk-nav-default">
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Clothing" class="uk-button uk-button-text">Одежда </a>
+                        <a href="/goods/category/Clothing" class="uk-button uk-button-text">Одежда </a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Shoes" class="uk-button uk-button-text">Обувь</a>
+                        <a href="/goods/category/Shoes" class="uk-button uk-button-text">Обувь</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Bags" class="uk-button uk-button-text">Сумки</a>
+                        <a href="/goods/category/Bags" class="uk-button uk-button-text">Сумки</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Interior" class="uk-button uk-button-text">Интерьер</a>
+                        <a href="/goods/category/Interior" class="uk-button uk-button-text">Интерьер</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/category/Accessories" class="uk-button uk-button-text">Аксессуары</a>
+                        <a href="/goods/category/Accessories" class="uk-button uk-button-text">Аксессуары</a>
                     </li>
                 </ul>
             </li>
