--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -1,7 +1,7 @@
     {% for product in products %}
     <!-- <li data-sex="{{product.sex}}" data-rating="{{product.flooredrating}}" data-duration="{{product.duration}}"
         data-price="{{product.id}}" style="border-top: 1px solid; border-right: 1px solid; padding: 0; margin: 0">
-        <a href="/creators/goods/{{product.id}}" class="uk-text-secondary uk-link-reset">
+        <a href="/goods/{{product.id}}" class="uk-text-secondary uk-link-reset">
             <div class="uk-card uk-card-hover" style=" width: 333px; border-collapse: collapse;">
                 <div class="uk-card-header">
                     <img src="{{product.picture1}}" width="300px" alt="" style="margin-bottom: 2%;">
@@ -36,7 +36,7 @@
     </li> -->
     <li data-sex="{{product.sex}}" data-rating="{{product.flooredrating}}" data-duration="{{product.duration}}"
         data-price="{{product.id}}">
-        <a href="/creators/goods/{{product.id}}" class="uk-text-secondary uk-link-reset">
+        <a href="/goods/{{product.id}}" class="uk-text-secondary uk-link-reset">
             <div class="box-footer">
                 <div style="width:238px;height:443px; margin: auto;">
                     <img src="{{product.picture1}}" width="238px" height="343px" alt="">
