--- a/bizopt/BO/templates/documents.html
+++ b/bizopt/BO/templates/documents.html
@@ -99,7 +99,7 @@
 
 <script>
     document.getElementById('search_pole').addEventListener('keyup', function (event) {
-        document.getElementById('searchBtn').href = "/creators/goods/search/" + document.getElementById(
+        document.getElementById('searchBtn').href = "/goods/search/" + document.getElementById(
             'search_pole').value;
         if (event.keyCode == 13) {
             document.getElementById('searchBtn').click();
