--- a/bizopt/BO/templates/main.html
+++ b/bizopt/BO/templates/main.html
@@ -37,7 +37,7 @@
     <div class="uk-grid uk-width-1 uk-felx uk-flex-center" uk-grid>
         {% for items in prom_items %}
         {% for item in items %}
-        <a href="/creators/goods/{{item.id}}" class="uk-width-1-4 uk-link-reset">
+        <a href="/goods/{{item.id}}" class="uk-width-1-4 uk-link-reset">
             <div class="uk-card uk-card-default uk-border-rounded uk-padding-small">
                 <div class="uk-card-title ">
                     <h3 class="uk-text-truncate">{{item.product_name}}</h3>
@@ -64,7 +64,7 @@
     <div class="uk-grid uk-width-1 " uk-grid>
         {% for shops in prom_shops %}
         {% for shop in shops %}
-        <a href="/creators/resumes/{{shop.name}}" class="uk-text-center uk-width-1-3">
+        <a href="/brands/{{shop.name}}" class="uk-text-center uk-width-1-3">
                 <div data-src="{{shop.logoImage}}"
                     class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-inline-clip uk-transition-toggle"
                     style="border: 3px solid black;" tabindex="0" uk-img>
