--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -858,7 +858,9 @@
                         <br>
                         <div class="uk-width-1 uk-flex uk-flex-center uk-flex-middle">
                             <button class="uk-button uk-button-secondary uk-width-3-5" name="partRegBtn"
-                                style="margin: 0 auto" type="submit">Отправить</button>
+                                style="margin: 0 auto" type="submit" onclick="UIkit.notification({message: '<span uk-icon=\'icon: check\'></span> Message with an icon'})">Отправить</button>
+                                <!-- <button class="uk-button uk-button-default demo" type="button" onclick="UIkit.notification({message: '<span uk-icon=\'icon: check\'></span> Message with an icon'})">With icon</button> -->
+
                         </div>
                         {% csrf_token %}
 
