add field front

--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -854,6 +854,17 @@
                             </div>
                         </div>
 
+                        <div class="uk-margin">
+                           <label class="uk-form-label uk-text-bold" for="form-horizontal-text">Расскажите о себе</label>
+                              <div class="uk-form-controls">
+                              <!--  <textarea name="info" class="uk-input uk-form-width-large uk-border-rounded"
+                                    id="form-horizontal-text" type="text" style="box-shadow: 1px;"
+                                    placeholder="info"> -->
+                                    <textarea class="uk-textarea" rows="5" placeholder="Textarea"
+                                    name="info" style="border-radius: 5px; box-shadow: 1px;" ></textarea>
+                            </div> 
+                        </div>
+
                         <br>
                         <br>
                         <div class="uk-width-1 uk-flex uk-flex-center uk-flex-middle">
