--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -744,7 +744,6 @@
             <div style="margin: auto;">
 
                 <h1 style="
-                        text-transform: lowercase;
                         font-size: 610%;
                         margin: auto;
                         text-align: center;" class="logo hidden" style="margin: auto;">Комиссия</h1>
@@ -764,7 +763,6 @@
             <div style="margin: auto;">
 
                 <h1 style="
-                        text-transform: lowercase;
                         font-size: 610%;
                         margin: auto;
                         text-align: center;" class="logo hidden" style="margin: auto;">Подписка</h1>
@@ -860,12 +858,10 @@
                               <!--  <textarea name="info" class="uk-input uk-form-width-large uk-border-rounded"
                                     id="form-horizontal-text" type="text" style="box-shadow: 1px;"
                                     placeholder="info"> -->
-                                    <textarea class="uk-textarea" rows="5" placeholder="Textarea"
+                                    <textarea class="uk-textarea" rows="5" placeholder="Info"
                                     name="info" style="border-radius: 5px; box-shadow: 1px;" ></textarea>
                             </div> 
                         </div>
-
-                        <br>
                         <br>
                         <div class="uk-width-1 uk-flex uk-flex-center uk-flex-middle">
                             <button class="uk-button uk-button-secondary uk-width-3-5" name="partRegBtn"
