--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -793,7 +793,7 @@
         <br>
         <br>
         <div
-            style="padding: 10% 0; width: 80vw; border-radius: 100px; background-image: linear-gradient(to left bottom, #88aebb, #688e9b,#4a6f7d, #2b5260, #0a3644);">
+            style="padding-top: 10%; padding-bottom: 5%; width: 80vw; border-radius: 100px; background-image: linear-gradient(to left bottom, #88aebb, #688e9b,#4a6f7d, #2b5260, #0a3644);">
 
 
             <div class="uk-width-1 uk-flex uk-flex-center uk-flex-around" style="margin: 0 auto; display: flex; ">
