--- a/bizopt/BO/templates/registration/login.html
+++ b/bizopt/BO/templates/registration/login.html
@@ -8,7 +8,7 @@
 	<link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
 	<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/css/uikit.min.css" />
-	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+	<script  src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 </head>
 
 <body>
@@ -71,7 +71,7 @@
 						</div>
 					</div>
 					<button style="margin-left: 20%; margin-bottom: 20%; margin-top: 5%"
-						class="uk-button uk-button-secondary" type="submit" name="btnform2">Войти</button>
+						class="uk-button uk-button-secondary" type="submit" name="btnform2" >Войти</button>
 				</div>
 
 			</form>
@@ -93,9 +93,12 @@
 		margin-top: 10px;
 	}
 </style>
-<script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
+<script src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
 </script>
+
 <script>
+	
+
 	$(document).ready(function () {
 		$("#signup").click(function () {
 			$("#signin-tab").css("display", "none");
