--- a/bizopt/BO/templates/tasks.html
+++ b/bizopt/BO/templates/tasks.html
@@ -155,7 +155,7 @@
 <!--    <script src="https://kit.fontawesome.com/dc42e4418f.js" crossorigin="anonymous"></script>-->
 
 <!--    <link href='' rel='stylesheet'>-->
-<!--    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>-->
+<!--    <script  src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>-->
 <!--    <style>-->
 <!--        body {-->
 <!--            background: #343a40bf;-->
@@ -234,7 +234,7 @@
 <!--            </div>-->
 <!--        </form>-->
 <!--    </div>-->
-<!--    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>-->
+<!--    <script  src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>-->
 </body>
 
 </html>
